Fixed DependenciesProc